test-cases/negative/test_081_type_mismatch_assignment.lay
# negative test: assigning wrong type to variable
# expected: type checker should catch this

the variable x of type Number is 'hello'


